--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^4.17.10",
     "react": "16.3.2",
